[gd_scene load_steps=3 format=3 uid="uid://b7fl6xuo5dxld"]

[ext_resource type="Script" uid="uid://71g8rdqj571m" path="res://scripts/enemy/Enemy.gd" id="1_3gvst"]
[ext_resource type="Script" uid="uid://hgje3f4nf1ag" path="res://scripts/enemy/EnemyStateMachine.gd" id="2_55jtl"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_3gvst")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="AttackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_55jtl")
